--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "cmdk": "^0.2.1",
     "convex": "^1.9.1",
     "lucide-react": "^0.335.0",
     "next": "14.1.0",
@@ -26,7 +27,8 @@
     "sonner": "^1.4.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
-    "usehooks-ts": "^2.15.1"
+    "usehooks-ts": "^2.15.1",
+    "zustand": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^20",
