--- a/package.json
+++ b/package.json
@@ -14,24 +14,33 @@
     "@clerk/clerk-react": "^4.30.5",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
+    "@hookform/resolvers": "^3.3.4",
+    "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-alert-dialog": "^1.0.5",
     "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "cmdk": "^0.2.1",
     "convex": "^1.9.1",
     "emoji-picker-react": "^4.8.0",
+    "framer-motion": "^11.0.20",
     "lucide-react": "^0.335.0",
-    "next": "14.1.0",
+    "next": "^14.1.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-hook-form": "^7.51.1",
+    "react-responsive": "^10.0.0",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.4.2",
     "tailwind-merge": "^2.2.1",
